# specter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/specter/: __init__.py  cli.py  config.py  server.py
src/specter/browser/: __init__.py  connection.py  console.py  interact.py  network.py  react.py  runtime.py  structure.py
